--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ./pr_build.sh
+        run: sh pr_build.sh
