--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # temporary files
 bin/
 
+# IntelliJ's project specific settings files
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
